--- a/contrib/translations/utf-8/es/es-0.78.0-alpha.txt
+++ b/contrib/translations/utf-8/es/es-0.78.0-alpha.txt
@@ -7,6 +7,9 @@ Número de pantalla a usar; valores dependen del SO y configuración del usuario
 :CONFIG_VSYNC
 Configuración de sincronización vertical no implementada (ajuste ignorado)
 .
+:CONFIG_VSYNC_SKIP
+Number of microseconds to allow rendering to block before skipping the next frame.
+.
 :CONFIG_FULLRESOLUTION
 Qué resolución usar para pantalla completa: 'original', 'desktop'
 o un tamaño fijo (por ejemplo, 1024x768).
@@ -268,6 +271,32 @@ debe haber un directorio MIDI que contenga los archivos
 patch para reproducción GUS. Conjunto de patchs
 usados con Timidity deberían funcionar bien.
 .
+:CONFIG_SIDMODEL
+Model of chip to emulate in the Innovation SSI-2001 card:
+ - auto:  Selects the 6581 chip.
+ - 6581:  The original chip, known for its bassy and rich character.
+ - 8580:  A later revision that more closely matched the SID specification.
+          It fixed the 6581's DC bias and is less prone to distortion.
+          The 8580 is an option on reproduction cards, like the DuoSID.
+ - none:  Disables the card.
+.
+:CONFIG_SIDCLOCK
+The SID chip's clock frequency, which is jumperable on reproduction cards.
+ - default: uses 0.895 MHz, per the original SSI-2001 card.
+ - c64ntsc: uses 1.023 MHz, per NTSC Commodore PCs and the DuoSID.
+ - c64pal:  uses 0.985 MHz, per PAL Commodore PCs and the DuoSID.
+ - hardsid: uses 1.000 MHz, available on the DuoSID.
+.
+:CONFIG_SIDPORT
+The IO port address of the Innovation SSI-2001.
+.
+:CONFIG_6581FILTER
+The SID's analog filtering meant that each chip was physically unique.
+Adjusts the 6581's filtering strength as a percent from 0 to 100.
+.
+:CONFIG_8580FILTER
+Adjusts the 8580's filtering strength as a percent from 0 to 100.
+.
 :CONFIG_PCSPEAKER
 Habilita emulación del PC-Speaker.
 .
@@ -287,6 +316,9 @@ Frecuencia de muestreo de la generación Tandy 3-Voice.
 .
 :CONFIG_DISNEY
 Habilita emulación Disney Sound Source. (compatible con Covox Voice Master y Speech Thing).
+.
+:CONFIG_PS1AUDIO
+Enable IBM PS/1 Audio emulation.
 .
 :CONFIG_JOYSTICKTYPE
 Tipo de joystick a emular: auto (por defecto),
@@ -1422,5 +1454,70 @@ DOS versión %d.%02d
 .
 :SHELL_CMD_VER_INVALID
 La versión DOS especificada no es correcta.
+
+.
+:PROGRAM_INTRO_CDROM_WINDOWS
+[2J[32;1mHow to mount a virtual CD-ROM Drive in DOSBox:[0m
+DOSBox provides CD-ROM emulation on several levels.
+
+This works on all normal directories, installs MSCDEX and marks the files
+read-only. Usually this is enough for most games:
+
+[34;1mmount D C:\example -t cdrom[0m
+
+If it doesn't work you might have to tell DOSBox the label of the CD-ROM:
+
+[34;1mmount D C:\example -t cdrom -label CDLABEL[0m
+
+Additionally, you can use imgmount to mount iso or cue/bin images:
+
+[34;1mimgmount D C:\cd.iso -t cdrom[0m
+
+[34;1mimgmount D C:\cd.cue -t cdrom[0m
+
+.
+:PROGRAM_INTRO_CDROM_OTHER
+[2J[32;1mHow to mount a virtual CD-ROM Drive in DOSBox:[0m
+DOSBox provides CD-ROM emulation on several levels.
+
+This works on all normal directories, installs MSCDEX and marks the files
+read-only. Usually this is enough for most games:
+
+[34;1mmount D ~/example -t cdrom[0m
+
+If it doesn't work you might have to tell DOSBox the label of the CD-ROM:
+
+[34;1mmount D ~/example -t cdrom -label CDLABEL[0m
+
+Additionally, you can use imgmount to mount iso or cue/bin images:
+
+[34;1mimgmount D ~/cd.iso -t cdrom[0m
+
+[34;1mimgmount D ~/cd.cue -t cdrom[0m
+
+.
+:SHELL_CMD_HELP_HELP_LONG
+HELP [command]
+
+.
+:SHELL_CMD_DELETE_HELP_LONG
+Usage:
+  [32;1mdel[0m [36;1mPATTERN[0m
+  [32;1merase[0m [36;1mPATTERN[0m
+
+Where:
+  [36;1mPATTERN[0m can be either an exact filename (such as [36;1mfile.txt[0m) or an inexact
+          filename using one or more wildcards, which are the asterisk (*)
+          representing any sequence of one or more characters, and the question
+          mark (?) representing any single character, such as [36;1m*.bat[0m and [36;1mc?.txt[0m.
+
+Warning:
+  Be careful when using a pattern with wildcards, especially [36;1m*.*[0m, as all files
+  matching the pattern will be deleted.
+
+Examples:
+  [32;1mdel[0m [36;1mtest.bat[0m
+  [32;1mdel[0m [36;1mc*.*[0m
+  [32;1mdel[0m [36;1ma?b.c*[0m
 
 .
