--- a/contrib/translations/utf-8/pl/pl-0.78.0-alpha.txt
+++ b/contrib/translations/utf-8/pl/pl-0.78.0-alpha.txt
@@ -510,7 +510,7 @@ Forwards one or more TCP ports from the host into the DOS guest.
 The format is:
   port1  port2  port3 ... (e.g., 21 80 443)
   This will forward FTP, HTTP, and HTTPS into the DOS guest.
-If the ports are privilidged on the host, a mapping can be used
+If the ports are privileged on the host, a mapping can be used
   host:guest  ..., (e.g., 8021:21 8080:80)
   This will forward ports 8021 and 8080 to FTP and HTTP in the guest
 A range of adjacent ports can be abbreviated with a dash:
@@ -522,7 +522,7 @@ Mappings and ranges can be combined, too:
 Notes:
   - If mapped ranges differ, the shorter range is extended to fit.
   - If conflicting host ports are given, only the first one is setup.
-  - If conflicting guest ports are given, the latter rule takes predecent.
+  - If conflicting guest ports are given, the latter rule takes precedent.
 .
 :CONFIG_UDP_PORT_FORWARDS
 Forwards one or more UDP ports from the host into the DOS guest.
